--- a/tf.js_projects/teachable-machine/index.html
+++ b/tf.js_projects/teachable-machine/index.html
@@ -18,8 +18,9 @@
     <video id="webcam" autoplay muted></video>
     
     <button id="enableCam">Enable Webcam</button>
-    <button class="dataCollector" data-1hot="0" data-name="Class 1">Gather Class 1 Data</button>
-    <button class="dataCollector" data-1hot="1" data-name="Class 2">Gather Class 2 Data</button>
+    <button class="dataCollector" data-1hot="0" data-name="background">Gather Background Data</button>
+    <button class="dataCollector" data-1hot="1" data-name="Class 1">Gather Class 1 Data</button>
+    <button class="dataCollector" data-1hot="2" data-name="Class 2">Gather Class 2 Data</button>
     <button id="train">Train &amp; Predict!</button>
     <button id="reset">Reset</button>
 
