--- a/tf.js_projects/PT_trainer/index.html
+++ b/tf.js_projects/PT_trainer/index.html
@@ -28,6 +28,23 @@
       </video>
     </div>
 
+    <div id = "countdown">
+      <div id="countdown-number">30</div>
+    </div>
+    </div>
+    <div class="action-list">
+      <button id="stop">
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/pause--v1.png" />
+      </button>
+      <button id="start">
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png" />
+      </button>
+      <button id="set">
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/stop.png" />
+      </button>
+    </div>
+    <audio id="timeout_audio"></audio>
+
     <p>
       <canvas id="testCanvas" width="345" height="345"></canvas>    
     </p>
