--- a/tf.js_projects/PT_trainer/index.html
+++ b/tf.js_projects/PT_trainer/index.html
@@ -58,12 +58,7 @@
             ></video>
           </div>
         </div>
-        <div class="col-4">
-          <canvas
-            id="thumbnails"
-            style="-webkit-transform: scaleX(-1); transform: scaleX(-1)"
-          >
-          </canvas>
+        <div id="thumbnails" class="col-4">
         </div>
       </div>
       <div class="row" style="padding-top: 20px">
